<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_bg"
    >
    <LinearLayout
        style="@style/LayoutMatchWrap"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <LinearLayout
            style="@style/LayoutMatchWrap.HospitalItem"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_item_hospital"
                style="@style/HospitalImage"
                tools:src="@drawable/rs_pondok_indah"/>
            <TableLayout
                style="@style/LayoutMatchWrap"
                android:layout_marginStart="10dp">
                <TableRow>
                    <TextView
                        android:id="@+id/tv_hospital_name"
                        style="@style/LayoutMatchWrap.HospitalName"
                        tools:text="@string/hospital_name"
                        />
                </TableRow>
                <TableRow android:layout_marginTop="-7dp">
                    <ImageView
                        android:layout_marginStart="-28dp"
                        android:src="@drawable/ic_line"
                        />
                    <ImageView
                        android:layout_marginStart="-28dp"
                        android:src="@drawable/ic_line"
                        />
                </TableRow>
                <RelativeLayout
                    style="@style/LayoutIcon">
                    <ImageView
                        style="@style/HospitalIcon"
                        android:src="@drawable/ic_location"
                        />
                    <TextView
                        android:id="@+id/tv_hospital_location"
                        style="@style/TextIcon"
                        android:text="@string/location"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_hospital_detail"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_latitude"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_longitude"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_web"
                        />
                </RelativeLayout>
                <RelativeLayout
                    style="@style/LayoutIcon">
                    <ImageView
                        style="@style/HospitalIcon"
                        android:src="@drawable/ic_telephone"
                        />
                    <TextView
                        android:id="@+id/tv_hospital_telephone"
                        style="@style/TextIcon"
                        android:text="@string/telephone"
                        />
                </RelativeLayout>
                <RelativeLayout
                    style="@style/LayoutIcon">
                    <ImageView
                        style="@style/HospitalIcon"
                        android:src="@drawable/ic_time"
                        />
                    <TextView
                        android:id="@+id/tv_hospital_time"
                        style="@style/TextIcon"
                        android:text="@string/time"
                        />
                </RelativeLayout>
                <RelativeLayout>
                    <Button
                        android:id="@+id/btn_detail"
                        style="@style/ButtonDetail"
                        android:text="@string/btn_detail" />
                </RelativeLayout>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>